[iPadOs] The second click event is missing on double tap when dblclick handler is not present https://bugs.webkit.org/show_bug.cgi?id=202006 <rdar://problem/51706828>

Reviewed by Wenson Hsieh.

Source/WebKit:

While double tapping,
1. the first tap triggers a click event through the normal _singleTapIdentified/_singleTapRecognized codepath.
2. and the second tap should trigger either
  a second single click event or
  a second single click followed by a dblclick event when dblclick handler is present.
However the second click is dropped on the floor when the node under the cursor does not have a dblclick handler (see handleDoubleTapForDoubleClickAtPoint()) -so we end up sending one click event.

This patch fixes this case by sending the second tap through the normal single tap flow when the dblclick handler is not present.

* Shared/ios/InteractionInformationAtPosition.h:
* Shared/ios/InteractionInformationAtPosition.mm:
(WebKit::InteractionInformationAtPosition::encode const):
(WebKit::InteractionInformationAtPosition::decode):
* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView setupInteraction]):
(-[WKContentView gestureRecognizerShouldBegin:]):
(WebKit::WebPage::positionInformation):
(WebKit::WebPage::requestPositionInformation):

LayoutTests:

* fast/events/touch/ios/double-tap-for-two-clicks1-expected.txt: Added.
* fast/events/touch/ios/double-tap-for-two-clicks1.html: Added.
* fast/events/touch/ios/double-tap-for-two-clicks2-expected.txt: Added.
* fast/events/touch/ios/double-tap-for-two-clicks2.html: Added.
* fast/events/touch/ios/double-tap-for-two-clicks3-expected.txt: Added.
* fast/events/touch/ios/double-tap-for-two-clicks3.html: Added.
* fast/events/touch/ios/double-tap-for-two-clicks4-expected.txt: Added.
* fast/events/touch/ios/double-tap-for-two-clicks4.html: Added.
* fast/events/touch/ios/doubleclick.html: Added.
* fast/events/touch/resources/doubleClickContent.html: Added.


Canonical link: https://commits.webkit.org/215759@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250315 268f45cc-cd09-0410-ab3c-d52691b4dbfc